[project]
name = "comfyui-titrain"
description = "Nodes:TextualInversionTrainingSDXL, TextualInversionTraining"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["accelerate>=0.16.0", "torchvision", "transformers>=4.25.1", "ftfy", "tensorboard", "Jinja2", "pexpect"]

[project.urls]
Repository = "https://github.com/mbrostami/ComfyUI-TITrain"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mbrostami"
DisplayName = "ComfyUI-TITrain"
Icon = ""
